[package]
name = "hid_monitor"
version = "0.1.2"
edition = "2021"
description = "Cross-platform Rust library for monitoring HID device plug/unplug events and enumerating current HID devices. Supports Windows and macOS."
license = "MIT"
readme = "README.md"
repository = "https://github.com/XuNazgul/hid_monitor"
keywords = ["hid", "usb", "device", "monitor", "human-interface", "hidmonitor", "mouse", "keyboard", "windows", "macos", "plug", "hotplug", "watcher"]
categories = ["hardware-support", "os::windows-apis", "os::macos-apis"]

[lib]
name = "hid_monitor"

[[bin]]
name = "hid_monitor_example"
path = "src/main.rs"

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi"
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
io-kit-sys = "0.1"
